[package]
name = "pleme-auth-mfa"
version = "0.1.0"
edition = "2021"
authors = ["Pleme Team"]
license = "MIT"
description = "Multi-factor authentication (TOTP + backup codes) for authentication services"
repository = "https://github.com/pleme-io/pleme-auth-mfa"
homepage = "https://github.com/pleme-io/pleme-auth-mfa"
readme = "README.md"

[dependencies]
uuid = "1.11"
totp-rs = "5.6"
rand = "0.8"
qrcode = "0.14"
base64 = "0.22"
redis = { version = "0.24", features = ["connection-manager", "tokio-comp"] }
chrono = "0.4"
thiserror = "1.0"
tracing = "0.1"


